tests/parser/errors/enums.rv
enum Foo {
    a,
    1,
}
enum Foo a, b

enum Foo {
    a, b,
